--- a/assets/css/sass/modules/flickity.scss
+++ b/assets/css/sass/modules/flickity.scss
@@ -79,21 +79,20 @@ https://flickity.metafizzy.co
 
 .flickity-prev-next-button {
 	top: 50%;
-	width: 44px;
-	height: 44px;
 	border-radius: 50%;
-	/* vertically center */
 	transform: translateY(-50%);
+	background: #fff;
+	padding: 15px;
 
 	&.previous { left: 10px; }
 	&.next { right: 10px; }
 
-	.flickity-button-icon {
-		position: absolute;
-		left: 20%;
-		top: 20%;
-		width: 60%;
-		height: 60%;
+	.woostify-svg-icon {
+		svg {
+			width: 20px;
+			height: 20px;
+			display: block;
+		}
 	}
 }
 
