--- a/assets/css/sass/modules/flickity.scss
+++ b/assets/css/sass/modules/flickity.scss
@@ -57,7 +57,6 @@ https://flickity.metafizzy.co
 
 	&:focus {
 		outline: none;
-		box-shadow: 0 0 0 5px #19F;
 	}
 
 	&:active {
@@ -82,12 +81,19 @@ https://flickity.metafizzy.co
 	border-radius: 50%;
 	transform: translateY(-50%);
 	background: #fff;
-	padding: 15px;
+	width: 50px;
+	height: 50px;
 
 	&.previous { left: 10px; }
 	&.next { right: 10px; }
 
 	.woostify-svg-icon {
+		display: inline-flex;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+
 		svg {
 			width: 20px;
 			height: 20px;
