--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -199,11 +199,22 @@
 				position: absolute;
 				left: 50%;
 				transform: translateX(-50%);
-				padding: 5px;
 				border: none;
+				width: 30px;
+				height: 30px;
 
-				.woostify-svg-icon svg {
-					display: block;
+				.woostify-svg-icon {
+					display: inline-flex;
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%, -50%);
+
+					svg {
+						display: block;
+						width: 15px;
+						height: 15px;
+					}
 				}
 
 				&.next {
