Fix shipping threshold not working at before checkout content and after checkout content

--- a/assets/css/sass/woocommerce/cart-sidebar.scss
+++ b/assets/css/sass/woocommerce/cart-sidebar.scss
@@ -267,6 +267,9 @@ $media: 599px;
 		&.pos-top {
 			margin: 10px 0;
 		}
+		&.pos-before-checkout {
+			margin: 10px 0;
+		}
 	}
 
     .woocommerce-mini-cart__buttons {
