--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1163,6 +1163,67 @@
 		}
 	}
 
+	.form-row {
+		position: relative;
+
+		label {
+			position: absolute;
+			top: 50%;
+			left: 12px;
+			background: #fff;
+			right: 30px;
+			pointer-events: none;
+			transform: translateY(-50%);
+			transition: all .3s;
+		}
+
+		.input-text {
+			width: 100%;
+			height: 50px;
+			padding: 20px 12px 0;
+			border-radius: 4px;
+		}
+
+		&.notes {
+			label {
+				top: 25px;
+			}
+			textarea {
+				padding: 20px 12px 12px !important;
+			}
+		}
+
+		&.w-anim-wrap {
+			label {
+				top: 15px;
+				font-size: 12px;
+				line-height: 1;
+				padding: 0;
+			}
+		}
+
+		&#billing_country_field {
+			label {
+				font-size: 12px;
+				line-height: 1;
+				padding: 0;
+				z-index: 9;
+				height: 38px;
+				top: 10px;
+				transform: none;
+				background: transparent;
+			}
+			.select2-selection {
+				border-radius: 4px;
+			}
+			.select2-selection__rendered {
+				padding: 25px 12px 0px;
+				line-height: 1.5;
+				min-height: 48px;
+			}
+		}
+	}
+
 	.woostify-row {
 		display: -webkit-box;
 		display: -ms-flexbox;
