Update style for thumbnails on horizontal layout before slider initialed.

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -284,6 +284,16 @@
 		}
 	}
 
+	&.horizontal-style {
+		#product-thumbnail-images {
+			display: flex;
+
+			&.flickity-enabled {
+				display: block;
+			}
+		}
+	}
+
 	.onsale {
 		z-index: 0;
 	}
