--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -300,6 +300,12 @@
 			&.flickity-enabled {
 				display: block;
 			}
+
+			.thumbnail-item {
+				&:first-child {
+					margin-left: 1px;
+				}
+			}
 		}
 	}
 
@@ -395,10 +401,6 @@
 		max-width: 70px;
 		width: 100%;
 		margin-right: 10px;
-
-		@media (max-width: $screen-md - 1) {
-			padding: 1px;
-		}
 
 		&.is-selected.is-nav-selected {
 			img {
