--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1174,13 +1174,14 @@
 			right: 30px;
 			pointer-events: none;
 			transform: translateY(-50%);
-			transition: all .3s;
+			transition: all .2s;
+			line-height: 36px;
 		}
 
 		.input-text {
 			width: 100%;
 			height: 50px;
-			padding: 20px 12px 0;
+			padding: 20px 12px 2px;
 			border-radius: 4px;
 		}
 
@@ -1197,19 +1198,19 @@
 			label {
 				top: 15px;
 				font-size: 12px;
-				line-height: 1;
+				line-height: 18px;
 				padding: 0;
 			}
 		}
 
-		&#billing_country_field {
+		&#billing_country_field, &#billing_state_field {
 			label {
 				font-size: 12px;
 				line-height: 1;
 				padding: 0;
 				z-index: 9;
 				height: 38px;
-				top: 10px;
+				top: 9px;
 				transform: none;
 				background: transparent;
 			}
@@ -1217,7 +1218,7 @@
 				border-radius: 4px;
 			}
 			.select2-selection__rendered {
-				padding: 25px 12px 0px;
+				padding: 23px 12px 2px;
 				line-height: 1.5;
 				min-height: 48px;
 			}
