--- a/assets/css/sass/modules/contact-form-7.scss
+++ b/assets/css/sass/modules/contact-form-7.scss
@@ -7,7 +7,7 @@
 		display: none;
 	}
 
-	.ajax-loader {
+	.ajax-loader, .wpcf7-spinner {
 		display: none;
 		opacity: 0;
 		visibility: hidden;
@@ -29,7 +29,7 @@
 
 	.wpcf7-form {
 		&.submitting {
-			.ajax-loader {
+			.ajax-loader, .wpcf7-spinner {
 				@extend .flex;
 				margin-top: 10px;
 				opacity: 1;
