--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1178,10 +1178,17 @@
 			line-height: 36px;
 		}
 
+		&:not(.no-label) {
+			.input-text {
+				width: 100%;
+				height: 50px;
+				padding: 20px 12px 2px;
+				border-radius: 4px;
+			}
+		}
 		.input-text {
 			width: 100%;
 			height: 50px;
-			padding: 20px 12px 2px;
 			border-radius: 4px;
 		}
 
