--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1163,6 +1163,14 @@
 		}
 	}
 
+	form.checkout_coupon {
+		.form-row {
+			.input-text {
+				padding: 0 1em;
+			}
+		}
+	}
+
 	.form-row {
 		position: relative;
 
@@ -1339,6 +1347,15 @@
 			@media (min-width: 1490px) {
 				max-width: 56.66666667%;
 				flex: 0 0 56.66666667%;
+			}
+			@media (min-width: $screen-xlg) {
+				flex: 0 0 55.66666667%;
+			}
+			@media (min-width: 2400px) {
+				flex: 0 0 54.66666667%;
+			}
+			@media (min-width: $screen-xxlg) {
+				flex: 0 0 53.66666667%;
 			}
 		}
 		.woostify-col {
