Update focus, error style for form field

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1198,6 +1198,15 @@
 			width: 100%;
 			height: 50px;
 			border-radius: 4px;
+			&:focus {
+				border-color: #000;
+			}
+		}
+
+		&.woocommerce-invalid-required-field, &.woocommerce-invalid {
+			.input-text, .select2-selection {
+				border-color: #d50000;
+			}
 		}
 
 		&.notes {
