--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1438,7 +1438,7 @@
 						position: absolute;
 						text-align: center;
 						border-radius: 50%;
-						background-color: #999;
+						background-color: #2e2e2e;
 						color: #fff;
 						-webkit-box-sizing: border-box;
 						box-sizing: border-box;
