--- a/style.css
+++ b/style.css
@@ -10044,7 +10044,7 @@ header.elementor-element {
   position: absolute;
   text-align: center;
   border-radius: 50%;
-  background-color: #999;
+  background-color: #2e2e2e;
   color: #fff;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
