Resolve conflict with checkout page created by woo builder.

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1129,7 +1129,7 @@
 	border-color: #ccc;
 }
 
-.checkout-layout-3 {
+.checkout-layout-3:not(.woobuilder-active) {
 	&.woocommerce-checkout {
 		.woocommerce {
 			position: static;
