Update gulp file, package dependencies, add carousel to related product section and upsell section

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -919,6 +919,15 @@
 		font-weight: normal;
 		padding: 25px 0;
 	}
+
+	ul.products {
+		&.tns-slider {
+			.product {
+				margin: 0;
+				float: none;
+			}
+		}
+	}
 }
 
 // Support for Woostify - Product Images
@@ -991,3 +1000,4 @@
 #product-addons-total {
 	clear: both;
 }
+
