--- a/style.css
+++ b/style.css
@@ -7810,12 +7810,14 @@ header.elementor-element {
 }
 
 .related,
-.up-sells {
+.up-sells,
+.woostify-product-recently-viewed-section {
   border-top: 1px solid #efefef;
 }
 
 .related > h2,
-.up-sells > h2 {
+.up-sells > h2,
+.woostify-product-recently-viewed-section > h2 {
   text-align: center;
   font-size: 18px;
   font-weight: normal;
@@ -7823,13 +7825,18 @@ header.elementor-element {
 }
 
 .related ul.products.tns-slider .product,
-.up-sells ul.products.tns-slider .product {
+.up-sells ul.products.tns-slider .product,
+.woostify-product-recently-viewed-section ul.products.tns-slider .product {
   margin: 0;
   float: none;
 }
 
 .woostify-product-images-widget .product-gallery {
   width: 100%;
+}
+
+.woostify-product-recently-viewed-section {
+  border: none;
 }
 
 .woostify-product-recently-viewed-section .woostify-product-recently-viewed-inner {
