Add customizer option, add custom product data tabs function

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -905,6 +905,12 @@
 			width: 100%;
 		}
 	}
+
+	&.layout-accordion {
+		.woocommerce-Tabs-panel {
+			padding: 0;
+		}
+	}
 }
 
 // RELATED && UPSELL
