--- a/style.css
+++ b/style.css
@@ -7809,8 +7809,37 @@ header.elementor-element {
   width: 100%;
 }
 
+.woocommerce-tabs.layout-accordion .woostify-tab-wrapper {
+  border-bottom: 1px solid #efefef;
+}
+
+.woocommerce-tabs.layout-accordion .woostify-tab-wrapper .woostify-svg-icon {
+  transition: transform .3s;
+}
+
+.woocommerce-tabs.layout-accordion .woostify-tab-wrapper.active .woostify-svg-icon {
+  transform: rotate(180deg);
+}
+
+.woocommerce-tabs.layout-accordion .woostify-accordion-title {
+  display: block;
+  padding: 15px 0;
+  font-size: 18px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .woocommerce-tabs.layout-accordion .woocommerce-Tabs-panel {
   padding: 0;
+  max-width: 100%;
+}
+
+.woocommerce-tabs.layout-accordion .woocommerce-Tabs-panel .woostify-tab-inner {
+  padding-bottom: 15px;
+}
+
+.woocommerce-tabs.layout-accordion .woocommerce-Tabs-panel .woostify-tab-inner > h2:first-child {
+  display: none;
 }
 
 .related,
