--- a/inc/customizer/custom-controls/product-data-tabs/style.css
+++ b/inc/customizer/custom-controls/product-data-tabs/style.css
@@ -10,3 +10,13 @@
 .adv-list-item-content .woostify-adv-list-control.customize-control-textarea .woostify-adv-list-input {
 	max-width: 100%;
 }
+.woostify-sortable-list-item-wrap .woostify-adv-list-item .sortable-item-icon-del {
+	cursor: pointer;
+}
+.adv-list-add-item-btn.button {
+	margin-top: 10px;
+}
+
+.woostify-sortable-list-item-wrap.example-item-tmpl {
+	display: none;
+}
