Add customize preview, content scrollable to layout accordion

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -933,9 +933,14 @@
 			.woostify-tab-inner {
 				padding-bottom: 15px;
 
-				>h2 {
-					&:first-child {
-						display: none;
+				.woostify-tab-scroll-content {
+					overflow-y: auto;
+					max-height: 250px;
+
+					>h2 {
+						&:first-child {
+							display: none;
+						}
 					}
 				}
 			}
