--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -927,8 +927,17 @@
     		justify-content: space-between;
 		}
 		.woocommerce-Tabs-panel {
+			display: none;
 			padding: 0;
 			max-width: 100%;
+			height: 0;
+			transition: height 350ms ease-in-out;
+			overflow: hidden;
+
+			&.is-visible {
+				height: auto;
+				display: block;
+			}
 
 			.woostify-tab-inner {
 				padding-bottom: 15px;
