--- a/style.css
+++ b/style.css
@@ -7830,8 +7830,17 @@ header.elementor-element {
 }
 
 .woocommerce-tabs.layout-accordion .woocommerce-Tabs-panel {
+  display: none;
   padding: 0;
   max-width: 100%;
+  height: 0;
+  transition: height 350ms ease-in-out;
+  overflow: hidden;
+}
+
+.woocommerce-tabs.layout-accordion .woocommerce-Tabs-panel.is-visible {
+  height: auto;
+  display: block;
 }
 
 .woocommerce-tabs.layout-accordion .woocommerce-Tabs-panel .woostify-tab-inner {
