--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -945,6 +945,18 @@
 				.woostify-tab-scroll-content {
 					overflow-y: auto;
 					max-height: 250px;
+					scrollbar-width: thin;
+					padding-right: 20px;
+
+					&::-webkit-scrollbar {
+						width: 5px;
+					}
+					&::-webkit-scrollbar-track {
+						background: #f2f2f2;
+					}
+					&::-webkit-scrollbar-thumb {
+						background: #d5d5d5;
+					}
 
 					>h2 {
 						&:first-child {
